environments/modules/vpc/security.tf
resource "aws_security_group" "jenkins_sg" {
  name        = "`SG"
  description = "Security group"
  vpc_id      = aws_vpc.testvpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
  Name = "${var.project}-SG"
  Environment = terraform.workspace
  }
}
